adapted logos to institute ci

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -106,7 +106,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Introduction to Control Theory</div>"
    ]
   },
@@ -4811,7 +4811,7 @@
     ]
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Thank you for your attention!</div>"
    ]
   },
