--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -114,7 +114,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"presentation first slide\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"presentation first slide\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Control and Planning</div>"
    ]
   },
@@ -3825,7 +3825,7 @@
     ]
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Thank you for the attention!</div>"
    ]
   },
