--- a/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
+++ b/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
@@ -99,7 +99,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Recent Developments in Control Theory</div>"
    ]
   },
@@ -1443,7 +1443,7 @@
     ]
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Thank you for the attention!</div>"
    ]
   },
