--- a/notebooks/nb_50_IntroRL.ipynb
+++ b/notebooks/nb_50_IntroRL.ipynb
@@ -307,7 +307,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Intro to Reinforcement Learning</div>"
    ]
   },
@@ -1340,7 +1340,7 @@
     ]
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Thank you for the attention!</div>"
    ]
   },
