--- a/notebooks/nb_70_TrainingRLAgents.ipynb
+++ b/notebooks/nb_70_TrainingRLAgents.ipynb
@@ -288,7 +288,7 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Training RL Agents </div>"
    ]
   },
@@ -915,7 +915,7 @@
     ]
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Thank you for the attention!</div>"
    ]
   }
