--- a/notebooks/nb_75_EnvironmentEngineering.ipynb
+++ b/notebooks/nb_75_EnvironmentEngineering.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,14 +14,14 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "%load_ext training_rl"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -192,27 +195,27 @@
    ],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -239,20 +242,17 @@
    ],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\">Environments and Feature Engineering </div>"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\">Environments and Feature Engineering </div>"
+   ]
   },
   {
    "cell_type": "markdown",
