--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T10:13:11.231023Z",
+     "start_time": "2023-12-17T10:13:10.356212Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,52 +18,45 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:10.356212Z",
-     "end_time": "2023-12-17T10:13:11.231023Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T10:13:11.245432Z",
+     "start_time": "2023-12-17T10:13:11.232473Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:11.232473Z",
-     "end_time": "2023-12-17T10:13:11.245432Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T10:13:11.546984Z",
+     "start_time": "2023-12-17T10:13:11.500639Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:11.500639Z",
-     "end_time": "2023-12-17T10:13:11.546984Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:12.424161Z",
-     "end_time": "2023-12-17T10:13:12.958422Z"
+     "end_time": "2023-12-17T10:13:12.958422Z",
+     "start_time": "2023-12-17T10:13:12.424161Z"
     }
    },
    "outputs": [],
@@ -106,58 +106,61 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\"> Imitation Learning </div>"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\"> Imitation Learning </div>"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Imitation Learning"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Introduction"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Imitation learning is a supervise learning approach focuses on learning policies or behaviors by observing and imitating expert demonstrations**. Instead of learning from trial and error, imitation learning leverages existing expert knowledge to train agents.\n",
     "\n",
     "This makes these algorithms appealing as **you don't need to create a reward function for your task** like in situations where the manual approach becomes essential because creating a reward function directly is not feasible, such as when training a self-driving vehicle."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The easiest imitation learning algorithm is call BC (Behavioral Cloning) and is just supervised learning on the collected expert data, i.e.:\n",
     "\n",
     "$$ D = \\{(s_0, a_0), (s_1, a_1), \\ldots, (s_T, a_T^o)\\} \\quad \\tag{Dataset} $$\n",
     "\n",
     "$$ L_{BC}(\\theta) = \\frac{1}{2} \\left(\\pi_\\theta(s_t) - a_t\\right)^2 \\tag{Cost function}$$"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "There are improve versions of BC like DAgger (Dataset Aggregation) where after BC the policy is being rollout and if new states appear a new feedback is to ask the human expert. This could produce a huge improvement, although it could be quite expensive.\n",
     "\n",
@@ -166,13 +169,13 @@
     "**pros**: If you have expert dataset, and you are not worry about safety (i.e. unexpected policy behavior in unknown states) this could be a fast approach.\n",
     "\n",
     "**cons**: In general we don't have access to expert data so this is one of the main issues, but even if we have we will have problems related with distributional shift between our clone policy and the provided dataset. We will see this in a moment in an exercise. Also, many of the properties of the Minari datasets (see exercise notebook) that could appear in reality cannot be handled with simple imitation learning approaches, like for instance the stitching property."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "There are other interesting methods that combine imitation learning and the offline RL methods we will introduce later. Typically, they involve two steps:\n",
     "\n",
@@ -181,10 +184,7 @@
     "2 - Applying offline RL for planning.\n",
     "\n",
     "In the first step, they use more sophisticated techniques for cloning, such as Transformers to generate new trajectories or normalizing flows to fit the state-action data distribution."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,8 +214,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:16.912486Z",
-     "end_time": "2023-12-17T10:13:16.944298Z"
+     "end_time": "2023-12-17T10:13:16.944298Z",
+     "start_time": "2023-12-17T10:13:16.912486Z"
     }
    },
    "outputs": [],
@@ -255,8 +255,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:18.622404Z",
-     "end_time": "2023-12-17T10:13:19.334538Z"
+     "end_time": "2023-12-17T10:13:19.334538Z",
+     "start_time": "2023-12-17T10:13:18.622404Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-12-17T10:13:21.872463Z",
-     "end_time": "2023-12-17T10:13:23.245110Z"
+     "end_time": "2023-12-17T10:13:23.245110Z",
+     "start_time": "2023-12-17T10:13:21.872463Z"
     }
    },
    "outputs": [],
@@ -346,8 +346,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-12-17T10:10:20.937274Z",
-     "end_time": "2023-12-17T10:10:59.186992Z"
+     "end_time": "2023-12-17T10:10:59.186992Z",
+     "start_time": "2023-12-17T10:10:20.937274Z"
     }
    },
    "outputs": [],
@@ -394,6 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
@@ -403,10 +406,7 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -603,6 +603,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### References\n",
     "\n",
@@ -611,17 +614,14 @@
     "[Janner et al. 2021 - Offline Reinforcement Learning as One Big Sequence Modeling Problem](https://arxiv.org/abs/2106.02039)\n",
     "\n",
     "[Prudencio et al. 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": []
   }
  ],
  "metadata": {
