--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,32 +14,29 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -89,31 +89,31 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\"> Offline RL distributional shift exercises </div>"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\"> Offline RL distributional shift exercises </div>"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Off-Policy Distributional Shift"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Distributional Shift I:"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Distributional Shift I:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,15 +488,18 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Distributional Shift II:"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Distributional Shift II:"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Exercise I\n",
     "\n",
@@ -515,23 +518,23 @@
     "In this example we will use again as off-policy RL algorithm, the Deep Q-Network (DQN) algorithm.\n",
     "\n",
     "**Let's setup our configuration and create the environment**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Environment"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Environment"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -549,23 +552,23 @@
     "\n",
     "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=env_2D_grid_initial_config)\n",
     "snapshot_env(env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Configure the two datasets"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Configure the two datasets"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "DATA_SET_IDENTIFIER_I = \"_downwards_\"\n",
@@ -575,23 +578,23 @@
     "DATA_SET_IDENTIFIER_II = \"_optimal_\"\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "NUM_STEPS_II = 1000"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Create combined Minari dataset"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Create combined Minari dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
@@ -602,23 +605,23 @@
     "        combined_dataset_identifier = \"_stiching\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Rendering behavioral policy"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Rendering behavioral policy"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Suboptimal policy\n",
@@ -630,14 +633,14 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Expert policy\n",
@@ -648,23 +651,23 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### State-action distribution"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### State-action distribution"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "name_combined_dataset = config_combined_data.data_set_name\n",
@@ -678,23 +681,23 @@
     "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.012))\n",
     "\n",
     "snapshot_env(env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Policy to train"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Policy to train"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -707,23 +710,23 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Training"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Run the training\n",
@@ -744,23 +747,23 @@
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
     "    restore_training=False,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Restore policy"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Restore policy"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -772,23 +775,23 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Let's visualize the policy"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Let's visualize the policy"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
@@ -799,32 +802,29 @@
     "    num_frames=1000,\n",
     "    imitation_policy_sampling=False\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Questions:\n",
     "\n",
     "1 - What do you notice? What happens if you increase the expert data? Is it better?\n",
     "\n",
     "2 - Try again with the BCQ algorithm."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
