--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:00.726151Z",
+     "start_time": "2023-12-16T17:56:59.841417Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,61 +18,54 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:56:59.841417Z",
-     "end_time": "2023-12-16T17:57:00.726151Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:02.243879Z",
+     "start_time": "2023-12-16T17:57:02.213509Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:57:02.213509Z",
-     "end_time": "2023-12-16T17:57:02.243879Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:03.983204Z",
+     "start_time": "2023-12-16T17:57:03.965114Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:57:03.965114Z",
-     "end_time": "2023-12-16T17:57:03.983204Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Introduction to Offline Reinforcement Learning</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Introduction to Offline Reinforcement Learning"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Introduction to Offline Reinforcement Learning"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,16 +168,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Benchmarking\n",
     "\n",
     "In most cases, offline RL methods typically train a policy with specific hyperparameters for a fixed number of steps. They then assess their quality by using the policy from the last iteration in an online evaluation. We will follow this approach in this workshop as it will allow us to focus on understanding concepts rather than fine-tuning optimization.\n",
     "\n",
     "However, it's worth noting that alternative methods in the realm of offline RL, known as **Offline Policy Evaluation (OPE)**, exist. These approaches aim to evaluate policy performance directly from the data without any interaction with the environment, which can be a realistic scenario. Although we won't delve into these methods in detail, it's important to acknowledge their existence. **It's worth noting that these methods are still considered somewhat unreliable, and there is ongoing progress in this area**."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
