--- a/notebooks/nb_91_RLOpenSourceDatasets.ipynb
+++ b/notebooks/nb_91_RLOpenSourceDatasets.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,42 +14,39 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\"> Offline-RL open source datasets </div>"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "<img src=\"_static/images/aai-institute-cover.png\" alt=\"Snow\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\"> Offline-RL open source datasets </div>"
+   ]
   },
   {
    "cell_type": "markdown",
